Add real Twilio SMS via /api/send-sms serverless function

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/homecarehub-src/index.html" },
+    { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/homecarehub-src/$1" }
   ]
 }
