--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Home Health Staffing Platform",
   "main": "index.js",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "vercel build"
+    "dev": "vercel dev"
   },
   "keywords": ["home health", "staffing"],
   "author": "",
